Next steps in getting native executable to read resources